--- a/Probabilità e Statistica.tex
+++ b/Probabilità e Statistica.tex
@@ -16,6 +16,7 @@
 \usepackage{contour}
 \usepackage[scr]{rsfso}
 \usepackage{bm}
+\usepackage{float}
 
 \theoremstyle{plain}
 \newtheorem{teorema}{Teorema}[section]
@@ -230,8 +231,8 @@ In questo caso, il significato è "o si verifica $E$, e non ci interessiamo di $
 \end{esercizio}
 % paragraph partizioni (end)
 % subsection operazioni_sugli_insiemi (end)
-\subsection{\sigma-algebra $\mathscr{F}$} % (fold)
-\label{sub:sigma_algebra_f}
+\subsection{Spazio degli Eventi} % (fold)
+\label{sub:spazio_degli_eventi}
 Abbiamo detto che $\mathscr{F}$ è una famiglia di sottoinsiemi di $\Omega$ che contiene tutti gli eventi che ci interessa analizzare. Diamo una definizione formale di evento:
 \begin{definizione}
 	Un sottoinsieme $E$ di $\Omega$ si dice evento se e solo se $E\in\mathscr{F}$.
@@ -319,7 +320,7 @@ Le proprietà di una \sigma-algebra sono:
 	\end{proof}
 \end{itemize}
 Se $\Omega$ è discreto, allora si può sempre prendere $\mathscr{F}=\mathds{P}(\Omega)$, ed è quello che si fa di solito.
-% subsection sigma_algebra_f (end)
+% subsection spazio_degli_eventi (end)
 \subsection{Misura di probabilità} % (fold)
 \label{sub:misura_di_probabilità}
 Diamo una definizione di misura di probabilità:
@@ -411,8 +412,8 @@ Sia $E\in\mathscr{F}$, definiamo una quantità $n_E$ che rappresenti il numero d
 \end{definizione}
 Questa misura in modo empirico il numero di volte in cui un dato evento si è verificato. Il limite più importante è che l'esperimento deve essere ripetibile.
 % subsubsection misura_empirica (end)
-\subsubsection{$\Omega$ discreto} % (fold)
-\label{subs:omega_discreto}
+\subsubsection{Spazio campionario discreto} % (fold)
+\label{subs:spazio_campionario_discreto}
 Nel caso in cui $\Omega$ sia discreto e $\mathscr{F}=\mathds{P}(\Omega)$, si può dimostrare che per identificare univocamente $P$ è sufficiente identificare i valori $p_\omega$ tali che
 \begin{equation*}
 	p_\omega=P(\{\omega\})\quad\text{con }\sum_{\omega\in\Omega}p_\omega=1
@@ -443,7 +444,7 @@ Se invece $\Omega$ è numerabile, identificare $P$ equivale ad identificare una 
 \begin{equation*}
 	\sum_{i=1}^{+\infty}p_i=1
 \end{equation*}
-% subsubsection omega_discreto (end)
+% subsubsection spazio_campionario_discreto (end)
 \subsubsection{Probabilità Uniforme} % (fold)
 \label{subs:probabilità_uniforme}
 Un caso particolare del punto precedente si ha se $\Omega$ è finito e tutti gli eventi elementari hanno la stessa probabilità:
@@ -1296,7 +1297,7 @@ Dimostriamo solo il calcolo del valor medio:
 	\end{align*}
 	La sommatoria corrisponde alla somma dei valori della densità discreta di una variabile aleatoria $Y\sim Bin(n-1,p)$ sui valori del suo alfabeto $\mathcal{Y}=\{0,\dots,n-1\}$; per definizione di $p_Y$, questa somma è $1$
 	\begin{equation*}
-		=n\cdot p\cdot\sum_{h=0}^{n-1} p_Y(h)=n\cdot p
+		=n\cdot p\cdot\sum_{h=0}^{n-1} p_Y(h)=n\cdot p\qedhere
 	\end{equation*}
 \end{proof}
 \begin{esercizio}
@@ -1363,8 +1364,8 @@ Dimostriamo solo il calcolo del valor medio:
 \begin{NB}
 	Indichiamo:
 	\begin{align*}
-		\mathds{N}=\{1,2,3,\dots\}\\
-		\mathds{N}_0=\{0,1,2,3,\dots\}
+		\mathds{N}&=\{1,2,3,\dots\}\\
+		\mathds{N}_0&=\{0,1,2,3,\dots\}
 	\end{align*}
 \end{NB}
 Una variabile $X$ si dice geometrica, e si indica
@@ -1420,7 +1421,7 @@ Dimostriamo il calcolo del valor medio:
 	&=-p\sum_{k\in\mathds{N}}\frac{d}{dp}[(1-p)^k]\\
 	&\text{per la linearità della derivata:}\\
 	&=-p\frac{d}{dp}\left[\sum_{k\in\mathds{N}}(1-p)^k\right]\\
-	&\text{per $k=1$ risulta un termine $1$ della somma,}\\
+	&\text{per $k=0$ risulta un termine $1$ della somma,}\\
 	&\text{che quindi è irrilevante per la derivata,}\\
 	&\text{e quindi si può far partire la sommatoria da $0$}\\
 	&=-p\frac{d}{dp}\left[\sum_{k\in\mathds{N}_0}(1-p)^k\right]\\
@@ -1535,7 +1536,7 @@ Formaliziamo l'intuizione che $Po(\lambda)$ sia il limite di $Bin(n,p)$ per n gr
 	Siano $X_n$ e $Y$ due variabili aleatorie tali che
 	\begin{align*}
 		X_n&\sim Bin\left(n, \frac{\lambda}{n}\right)\\
-		Y\sim Po(\lambda)
+		Y&\sim Po(\lambda)
 	\end{align*}
 	Allora
 	\begin{equation*}
@@ -1738,5 +1739,135 @@ Mentre è possibile calcolare le densità marginali dalla densità congiunta, no
 	\end{equation*}
 \end{definizione}
 % subsection caratterizzazione_dei_vettori_aleatori (end)
+\subsection{Indipendenza fra Variabili Aleatorie} % (fold)
+\label{sub:indipendenza_fra_variabili_aleatorie}
+Introduciamo il concetto di indipendenza fra variabili aleatorie per una coppia di variabili:
+\begin{definizione}
+	La coppia $(X,Y)$ si dice indipendente (o analogamente $X$ e $Y$ si dicono indipendenti) se e solo se 
+	\begin{equation*}
+		p_{XY}(x_i,y_j)=p_X(x_i)p_Y(y_j)\quad\forall x_i\in\mathcal{X},\forall y_j\in\mathcal{Y}
+	\end{equation*}
+\end{definizione}
+La definizione è analoga a quella di eventi indipendenti, con la differenza che in questo caso bisogna dimostrare che tutte le probabilità congiunte si fattorizzano nel prodotto delle marginali, quindi generalmente è un calcolo piuttosto oneroso.
+\begin{osservazione}
+	\begin{equation*}
+		X,Y\text{ indipendenti}\Leftrightarrow f(X),g(Y)\text{ indipendenti}\quad\forall f,g:\mathds{R}\to\mathds{R}
+	\end{equation*}
+\end{osservazione}
+Vediamo come questo concetto influenza il valor medio
+\begin{teorema}
+	Se $X$ e $Y$ sono indipendenti, allora
+	\begin{equation*}
+		E(XY)=E(X)E(Y)
+	\end{equation*}
+\end{teorema}
+\begin{proof}
+	\begin{align*}
+		E(XY)&=\sum_{x_i\in\mathcal{X}}\sum_{y_j\in\mathcal{Y}}x_iy_jp_{XY}(x_i,y_j)\\
+		&\text{per l'indipendenza di }X\text{ e }Y\text{:}\\
+		&=\sum_{x_i\in\mathcal{X}}\sum_{y_j\in\mathcal{Y}}x_iy_jp_X(x_i)p_Y(y_j)\\
+		&=\sum_{x_i\in\mathcal{X}}x_ip_X(x_i)\sum_{y_j\in\mathcal{Y}}y_jp_Y(y_j)\\
+		&=E(X)E(Y)\qedhere
+	\end{align*}
+\end{proof}
+Da questo teorema seguono due conseguenze: se $X$ e $Y$ sono indipendenti
+\begin{enumerate}
+	\item $Cov(X,Y)=0$
+	\begin{proof}
+		\begin{align*}
+			Cov(X,Y)&=E(XY)-E(X)E(Y)\\
+			&=E(X)E(Y)-E(X)E(Y)=0\qedhere
+		\end{align*}
+	\end{proof}
+	\begin{nota}
+		Se $Cov(X,Y)=0$ allora $X$ e $Y$ si dicono scorrelate. Chiaramente, l'indipendenza implica la scorrelazione; non è vero il viceversa.
+	\end{nota}
+	\item $Var(X+Y)=Var(X)+Var(Y)$
+	\begin{proof}
+		Abbiamo visto che
+		\begin{equation*}
+			Var(X+Y)=Var(X)+Var(Y)+2Cov(X,Y)
+		\end{equation*}
+		Ma dal punto 1. $Cov(X,Y)=0$, quindi:
+		\begin{equation*}
+			Var(X+Y)=Var(X)+Var(Y)\cancel{+2Cov(X,Y)}=Var(X)+Var(Y)\qedhere
+		\end{equation*}
+	\end{proof}
+\end{enumerate}
+\begin{NB}
+	Dal punto 2. sappiamo che se le variabili sono indipendenti la varianza è additiva, ma non lineare, perchè mentre si distribuisce sulle somme, le costanti continuano ad essere "portate fuori" al quadrato.
+\end{NB}
+\subsubsection{Generalizzazione a più Variabili} % (fold)
+\label{ssub:generalizzazione_a_più_variabili}
+\begin{definizione}
+	L'insieme di variabili aleatorie $\{X_1,X_2,\dots,X_n\}$ è detto indipendente se e solo se
+	\begin{equation*}
+		p_{X_1,\dots,X_n}(x_1,\dots,x_n)=p_{X_1}(x_1)\cdot\ldots\cdot p_{X_n}(x_n)\quad\forall x_1,\dots,x_n
+	\end{equation*}
+\end{definizione}
+Non vedremo molto sull'indipendenza di più variabili, ma una proprietà importante è
+\begin{proposizione}
+	Se $X_1,\ldots,X_n$ sono indipendenti, allora
+	\begin{equation*}
+		Var\left(\sum_{i=1}^nX_i\right)=\sum_{i=1}^nVar(X_i)
+	\end{equation*}
+\end{proposizione}
+% subsubsection generalizzazione_a_più_variabili (end)
+\begin{esercizio}
+	Si lancia un dado truccato in modo che
+	\begin{equation*}
+		P(\text{"ottenere punteggio }i\text{"})=
+		\begin{cases}
+			p&\text{se }i\text{ è dispari}\\
+			2p&\text{se }i\text{ è pari}
+		\end{cases}
+	\end{equation*}
+	con $p\in[0,1]$. Indicando con $D$ il punteggio del dado, definiamo le variabili aleatorie
+	\begin{equation*}
+		X=
+		\begin{cases}
+			1&\text{se }D\text{ è pari}\\
+			0&\text{altrimenti}
+		\end{cases}
+	\end{equation*}
+	e 
+	\begin{equation*}
+		Y=
+		\begin{cases}
+			1&\text{se }D>3\\
+			0&\text{altrimenti}
+		\end{cases}
+	\end{equation*}
+	Determinare la densità congiunta di $X$ e $Y$.
+	\begin{soluzione}
+		Determiniamo $p$ sfruttando la condizione di normalizzazione:
+		\begin{equation*}
+			3p+3(2p)=1\Leftrightarrow p=\frac{1}{9}
+		\end{equation*}
+		Per il punteggio del dado si ottiene:
+		\begin{align*}
+			P(D=1)=P(D=3)=P(D=5)&=\frac{1}{9}\\
+			P(D=2)=P(D=4)=P(D=6)&=\frac{2}{9}\\
+		\end{align*}
+		Caratterizziamo il vettore $(X,Y)$: l'alfabeto è
+		\begin{equation*}
+			\mathcal{X}\times\mathcal{Y}=\{(0,0),(0,1),(1,0),(1,1)\}
+		\end{equation*}
+		La densità congiunta è data da:
+		\begin{align*}
+			p_{XY}(0,0)&=P(\{D\text{ dispari}\}\cap \{D\leq3\})\\
+			&=P(D\in\{1,3\})\\
+			&=P(D=1)+P(D=3)=\frac{2}{9}\\
+			p_{XY}(0,1)&=P(\{D\text{ dispari}\}\cap \{D>3\})\\
+			&=P(D=5)=\frac{1}{9}\\
+			p_{XY}(1,0)&=P(\{D\text{ pari}\}\cap \{D\geq3\})\\
+			&=P(D=2)=\frac{2}{9}\\
+			p_{XY}(1,1)&=P(\{D\text{ pari}\}\cap \{D>3\})\\
+			&=P(D\in\{4,6\})\\
+			&=P(D=4)+P(D=6)=\frac{4}{9}\qedhere
+		\end{align*}
+	\end{soluzione}
+\end{esercizio}
+% subsection indipendenza_fra_variabili_aleatorie (end)
 % section vettori_aleatori_discreti (end)
 \end{document}
